[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/interruptor_ON.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Interruptor.gd" type="Script" id=2]
[ext_resource path="res://Assets/Nokia 3310 Font Pack 2021/Efforts @somepx/EffortsPro.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/interruptor_OFF.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Interruptor" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Press" type="Label" parent="."]
visible = false
margin_left = -15.0
margin_top = -21.0
margin_right = 31.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "Press E"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Interruptor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Interruptor_body_exited"]
